build_output_dbg.txt
Building macOS application...                                   
Failed frontend command:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swift-frontend -frontend -c /Users/aslam/Documents/Misc/writing-assistant/macos/Runner/MainFlutterWindow.swift -primary-file /Users/aslam/Documents/Misc/writing-assistant/macos/Runner/AppDelegate.swift /Users/aslam/Documents/Misc/writing-assistant/macos/Flutter/GeneratedPluginRegistrant.swift /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/DerivedSources/GeneratedAssetSymbols.swift -emit-dependencies-path /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/Objects-normal/arm64/AppDelegate.d -emit-const-values-path /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/Objects-normal/arm64/AppDelegate.swiftconstvalues -emit-reference-dependencies-path /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/Objects-normal/arm64/AppDelegate.swiftdeps -serialize-diagnostics-path /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/Objects-normal/arm64/AppDelegate.dia -target arm64-apple-macos10.15 -module-can-import-version AppKit 2685.10.108 2685.10.108 -module-can-import-version DeveloperToolsSupport 23.0.4 23.0.4 -module-can-import-version SwiftUI 7.0.84.1 7.0.84 -load-resolved-plugin /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/lib/swift/host/plugins/libFoundationMacros.dylib\#/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/bin/swift-plugin-server\#FoundationMacros -load-resolved-plugin /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/lib/swift/host/plugins/libObservationMacros.dylib\#/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/bin/swift-plugin-server\#ObservationMacros -load-resolved-plugin /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/lib/swift/host/plugins/libPreviewsMacros.dylib\#/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/bin/swift-plugin-server\#PreviewsMacros -load-resolved-plugin /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/lib/swift/host/plugins/libSwiftMacros.dylib\#/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/bin/swift-plugin-server\#SwiftMacros -load-resolved-plugin /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/lib/swift/host/plugins/libSwiftUIMacros.dylib\#/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/usr/bin/swift-plugin-server\#SwiftUIMacros -disable-implicit-swift-modules -Xcc -fno-implicit-modules -Xcc -fno-implicit-module-maps -explicit-swift-module-map-file /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/Objects-normal/arm64/writing_assistant-dependencies-1.json -Xllvm -aarch64-use-tbi -enable-objc-interop -stack-check -sdk /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX26.0.sdk -I /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Products/Debug -F /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Products/Debug -F /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Products/Debug/screen_retriever_macos -F /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Products/Debug/system_tray -F /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Products/Debug/window_manager -no-color-diagnostics -Xcc -fno-color-diagnostics -enable-testing -g -debug-info-format\=dwarf -dwarf-version\=4 -module-cache-path /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/SwiftExplicitPrecompiledModules -swift-version 5 -enforce-exclusivity\=checked -Onone -D DEBUG -D COCOAPODS -serialize-debugging-options -const-gather-protocols-file /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/Objects-normal/arm64/Runner_const_extract_protocols.json -enable-experimental-feature DebugDescriptionMacro -enable-bare-slash-regex -empty-abi-descriptor -validate-clang-modules-once -clang-build-session-file /Users/aslam/Documents/Misc/writing-assistant/build/macos/ModuleCache.noindex/Session.modulevalidation -Xcc -working-directory -Xcc /Users/aslam/Documents/Misc/writing-assistant/macos -enable-anonymous-context-mangled-names -file-compilation-dir /Users/aslam/Documents/Misc/writing-assistant/macos -Xcc -D_LIBCPP_HARDENING_MODE\=_LIBCPP_HARDENING_MODE_DEBUG -Xcc -ivfsstatcache -Xcc /Users/aslam/Documents/Misc/writing-assistant/build/macos/SDKStatCaches.noindex/macosx26.0-25A352-28806144b0707e398aac92880fa50324.sdkstatcache -Xcc -I/Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/swift-overrides.hmap -Xcc -iquote -Xcc /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/writing_assistant-generated-files.hmap -Xcc -I/Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/writing_assistant-own-target-headers.hmap -Xcc -I/Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/writing_assistant-all-non-framework-target-headers.hmap -Xcc -ivfsoverlay -Xcc /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner-18c1723432283e0cc55f10a6dcfd9e02-VFS/all-product-headers.yaml -Xcc -iquote -Xcc /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/writing_assistant-project-headers.hmap -Xcc -I/Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Products/Debug/include -Xcc -I/Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Products/Debug/screen_retriever_macos/screen_retriever_macos.framework/Headers -Xcc -I/Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Products/Debug/system_tray/system_tray.framework/Headers -Xcc -I/Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Products/Debug/window_manager/window_manager.framework/Headers -Xcc -I/Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/DerivedSources-normal/arm64 -Xcc -I/Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/DerivedSources/arm64 -Xcc -I/Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/DerivedSources -Xcc -DDEBUG\=1 -Xcc -DCOCOAPODS\=1 -no-auto-bridging-header-chaining -module-name writing_assistant -frontend-parseable-output -disable-clang-spi -target-sdk-version 26.0 -target-sdk-name macosx26.0 -clang-target arm64-apple-macos26.0 -in-process-plugin-server-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/host/libSwiftInProcPluginServer.dylib -o /Users/aslam/Documents/Misc/writing-assistant/build/macos/Build/Intermediates.noindex/Runner.build/Debug/Runner.build/Objects-normal/arm64/AppDelegate.o -index-unit-output-path /Runner.build/Debug/Runner.build/Objects-normal/arm64/AppDelegate.o
/Users/aslam/Documents/Misc/writing-assistant/macos/Runner/AppDelegate.swift:14:9: error: cannot find 'AccessibilityPlugin' in scope
        AccessibilityPlugin.register(with: controller.engine.registrar(forPlugin: "AccessibilityPlugin"))
        ^~~~~~~~~~~~~~~~~~~
** BUILD FAILED **

Build process failed
